# PythonEXE

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  build.py  hello.py  input.txt  pyproject.toml
speed_test/: Makefile  README.md  build.py  fibo.py
