[tool.poetry]
name = "pythonexe"
version = "0.1.0"
description = "How to create an executable file from a Python project"
authors = ["Jabba Laci <jabba.laci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pynt = "^0.8.2"
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
