[project]
name = "pythonexe"
version = "0.1.0"
description = "How to create an executable file from a Python project"
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
